--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -498,4 +498,14 @@ body {
 }
 .pagination__item:hover {
   background-color: #F4F0EC;
+}
+
+.blog-details {
+  background: url(../img/blog-details/bg.jpg);
+  height: 351px;
+  width: 100%;
+}
+
+.articles-blog {
+  padding: 200px 0 96px 0;
 }/*# sourceMappingURL=style.css.map */
