--- a/lesson3/scss/style.scss
+++ b/lesson3/scss/style.scss
@@ -6,5 +6,7 @@
 @import './blocks/main';
 //  Подключение блока blog
 @import './blocks/blog';
+//  Подключение блока blog-details
+@import './blocks/blog-details';
 //  Подключение media
 @import 'media'
