--- a/lesson3/scss/blocks/_blog-details.scss
+++ b/lesson3/scss/blocks/_blog-details.scss
@@ -1,4 +1,4 @@
-.blog-details {
+.blog-details-bg {
   background: url(../img/blog-details/bg.jpg);
   height: 351px;
   width: 100%;
@@ -6,4 +6,159 @@
 
 .articles-blog {
   padding: 200px 0 96px 0;
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 53px;
+  }
+}
+
+.blog-list {
+  width: 799px;
+  flex-shrink: 0;
+}
+
+.blog-item {
+  margin-bottom: 35px;
+
+  &__title {
+    font-size: 50px;
+    margin-bottom: 11px;
+  }
+
+  &__img {
+    width: 100%;
+    height: 539px;
+    background: url(../img/blog-details/blog-1.png) center/ cover no-repeat;
+    border-radius: 50px;
+    margin-bottom: 46px;
+
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 48px;
+  }
+
+  &__date {
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 16px;
+  }
+
+  &__text {
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+    line-height: 150%;
+  }
+
+  &__breadcrumb-right {
+    margin-right: 60px;
+  }
+}
+
+.breadcrumb__link__small {
+  color: #4D5053;
+  font-family: $jost;
+  font-size: 16px;
+}
+
+.tags {
+
+  &__title {
+    font-size: 25px;
+    margin-bottom: 33px;
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  &__button {
+    font-family: $jost;
+    font-size: 18px;
+    border-radius: 10px;
+    background: #F4F0EC;
+    padding: 9px 30px;
+
+    &:hover {
+      background: #292F36;
+      color: #FFF;
+      transition: all 0.5s;
+    }
+  }
+}
+
+.blog-details {
+
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 267px;
+    border-radius: 50px;
+    background: #F4F0EC;
+    color: #CDA274;
+    margin-bottom: 27px;
+  }
+
+  &__info-limiter {
+    height: 63px;
+    display: flex;
+    align-items: flex-end;
+  }
+
+
+  &__info-symbol {
+    font-size: 200px;
+    text-align: center;
+  }
+
+  &__info-text {
+    font-size: 25px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 125%;
+  }
+
+
+
+  &__title {
+    font-size: 50px;
+    margin-bottom: 20px;
+  }
+
+  &__text {
+    color: #4D5053;
+    font-family: $jost;
+    font-size: 22px;
+    margin-bottom: 24px;
+    line-height: 150%;
+  }
+
+  &__item {
+    color: #4D5053;
+    font-family: $jost;
+    font-size: 22px;
+    margin-bottom: 32px;
+    line-height: 150%;
+  }
+
+  &__img {
+    background: url(../img/blog-details/blog-2.png) center/cover no-repeat;
+    width: 100%;
+    height: 365px;
+    border-radius: 50px;
+    margin-bottom: 35px;
+  }
 }
