--- a/lesson3/scss/blocks/_main.scss
+++ b/lesson3/scss/blocks/_main.scss
@@ -288,6 +288,7 @@
 .footer {
   margin-bottom: 134px;
 
+
   &__wrapper {
     display: flex;
     justify-content: space-between;
@@ -305,6 +306,7 @@
     color: #4D5053;
     font-family: $jost;
     font-size: 22px;
+    line-height: 150%
   }
 
   &__about-social-network {
@@ -332,6 +334,7 @@
     color: #4D5053;
     font-family: $jost;
     font-size: 22px;
+    line-height: 150%;
     margin-bottom: 30px;
   }
 
@@ -345,6 +348,7 @@
     color: #4D5053;
     font-family: $jost;
     font-size: 22px;
+    line-height: 150%;
     margin-bottom: 30px;
   }
 }
